phpmyadmin-service.aks.yml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service-aks
spec:
  type: LoadBalancer
  ports:
  - port: 82
  selector:
    app: phpmyadmin
