wordpress-service.aks.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service-aks
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: wordpress
