wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30012
